# da-exchange-dashboard

./: .gitignore  Procfile  pyproject.toml  wsgi.py
da_exchange_dashboard/: __init__.py  app.py
da_exchange_dashboard/data/: snapshots.db  tokenx_manual.json
da_exchange_dashboard/ingest/: db.py  poller.py  store.py
da_exchange_dashboard/ingest/adapters/: binance_th.py  bitkub.py  coingecko.py  innovestx.py  upbit_th.py
da_exchange_dashboard/static/css/: app.css
da_exchange_dashboard/templates/: index.html
dashboard/: app.py  insights.py
dashboard/static/css/: app.css
dashboard/templates/: index.html  symbol.html
ingest/: poller.py  store.py
ingest/adapters/: binance_th.py  bitkub.py  coingecko.py  orbix.py  upbit_th.py
scripts/: com.anthonyb.daexchange.plist  start_poller.sh  stop_poller.sh
