[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "da-exchange-dashboard"
version = "0.1.0"
description = "InnovestX DA — Thai digital-asset exchange monitoring dashboard (Flask Blueprint)"
requires-python = ">=3.10"
authors = [{ name = "Anthony B" }]
license = { text = "Proprietary" }
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
serve = ["gunicorn>=21.2.0"]

[tool.setuptools]
packages = [
    "da_exchange_dashboard",
    "da_exchange_dashboard.ingest",
    "da_exchange_dashboard.ingest.adapters",
]

[tool.setuptools.package-data]
da_exchange_dashboard = [
    "templates/*.html",
    "static/css/*.css",
    "static/**/*",
    "data/*.json",
]
